--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.11.0",
     "@astrojs/check": "^0.7.0",
+    "@astrojs/preact": "^3.5.0",
+    "astro": "^4.11.0",
+    "preact": "^10.22.0",
     "typescript": "^5.5.2"
   }
 }
