--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@paralleldrive/cuid2": "^2.2.2",
     "@types/wicg-file-system-access": "^2023.10.5",
     "astro": "^4.11.0",
+    "exifr": "^7.1.3",
     "fuse.js": "^7.0.0",
     "lodash.debounce": "^4.0.8",
     "nanostores": "^0.10.3",
